# yrss

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  env.conf.defaults  models.py  pyproject.toml  requirements.txt  server.py  youtube.py  yrss.py  yrss2.db  yrss2.py
migrations/: 20240714a-add-short.py  20240714b-backfill-short.py
templates/: _base.html  confirm.html  feed.xml  filters.html  home.html  login.html  podcast.xml  profile.html  register.html  subscriptions.html  videos.html
