[tool.poetry]
name = "yrss"
version = "0.1.0"
description = ""
authors = ["JP Verkamp <jverkamp@dropbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.1"
cachetools = "^5.3.1"
flask = "^2.3.3"
peewee = "^3.16.3"
peewee-extra-fields = "^2.8.2"
python-dateutil = "^2.8.2"
requests = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
